@@ -1,3 +1,7 @@
+2017-11-15    <cerebrum@cleomedes.uit.no>
+
+	* wipe.py: Added to repo. it deletes passwords from the change_log table
+
 2017-11-13    <cerebrum@cleomedes.uit.no>
 
 	* export_ad.py: this script will now use 2 different functions to
